--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_core: ^0.4.0 # add dependency for Firebase core
+  firebase_auth: ^0.11.1
+  google_sign_in: ^4.0.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
