--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   firebase_core: ^0.4.0+6 # add dependency for Firebase core
   firebase_auth: ^0.6.2+1
   google_sign_in: ^3.2.2
+  cloud_firestore: ^0.12.5+2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
