--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,10 @@ dependencies:
   flutter:
     sdk: flutter
   cloud_firestore: 0.12.5+2
+  firebase_ml_vision: ^0.9.0+3
+  camera: ^0.5.2+1
+  path_provider: ^1.1.0
+  path: ^1.6.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
