--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   camera: ^0.5.2+1
   path_provider: ^1.1.0
   path: ^1.6.2
+  image_picker: ^0.5.0
+  firebase_core: ^0.4.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
